# adventofcode2022

./: README.md
day01/: README.md  run1  run2  run_getElfNumber
day02/: points.awk  points2.awk  run1  run2
day03/: findbatch.php  findpriority.php  run1  run2
day04/: findinclude.php  findoverlap.php  run1  run2  sum.awk
day05/: CMakeLists.txt  main.cpp
day05/lib/: CMakeLists.txt  supplyStack.cpp  supplyStack.h
day06/: README.md  startmessage.c  startsequence.c
day07/: find_small.awk  listdirs.awk  run1  run2  sum_filter.awk
day08/: trees.py
day09/: rope.py
day10/: image.awk  run1  run2  scores.awk
day11/: Cargo.toml  Main.java  Monkey.java  README.md
day11/src/: main.rs  monkey.rs
day12/: find_route.sage  find_route_smallandvisual.sage
day13/: compare.rb  compare.sh  firstelement.rb  position.rb  position.sh  run1  run2  sort.sh
day14/: README.md  sandflow.c
day15/: beacon.py  scanline.py
day16/: CMakeLists.txt  main.cpp
day16/lib/: CMakeLists.txt  implementations.cpp  instance.h  instancewithelephant.h  tunnelmap.h  twosymbol.h  valve.h
day17/: Chamber.java  README.md  build.sh
day18/: boulders.py
day19/: CMakeLists.txt  main.cpp
day19/lib/: Blueprint.h  CMakeLists.txt  Storage.h  implementations.cpp  instance.h
day20/: Numberlist.java  README.md  build.sh
day21/: calculator.sage
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: landscape.rs  main.rs
day25/: format.rb  parse.rb  run1
